--- a/article_api/pom.xml
+++ b/article_api/pom.xml
@@ -15,6 +15,9 @@
 	<description>Management Tool for Articles</description>
 	<properties>
 		<java.version>17</java.version>
+		<starter-jdbc.version>3.1.3</starter-jdbc.version>
+		<jjwt.version>0.11.5</jjwt.version>
+		<security.version>3.1.3</security.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,10 +31,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<version>${starter-jdbc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>${security.version}</version>
 		</dependency>
 
 		<dependency>
@@ -53,17 +62,17 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-orgjson</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
